--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/breeze": "^2.3",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
+        "laravel/socialite": "^5.22",
         "laravel/telescope": "^5.9",
         "laravel/tinker": "^2.10.1",
         "tightenco/ziggy": "^2.0"
