--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/socialite": "^5.22",
         "laravel/telescope": "^5.9",
         "laravel/tinker": "^2.10.1",
+        "midtrans/midtrans-php": "^2.6",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
